// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`denormalize denormalizes entities 1`] = `
Array [
  Object {
    "id": 1,
    "type": "foo",
  },
  Object {
    "id": 2,
    "type": "bar",
  },
]
`;

exports[`denormalize denormalizes nested entities 1`] = `
Object {
  "author": Object {
    "id": "8472",
    "name": "Paul",
  },
  "body": "This article is great.",
  "comments": Array [
    Object {
      "comment": "I like it!",
      "id": "comment-123-4738",
      "user": Object {
        "id": "10293",
        "name": "Jane",
      },
    },
  ],
  "id": "123",
  "title": "A Great Article",
}
`;

exports[`denormalize denormalizes with function as idAttribute 1`] = `
Array [
  Object {
    "guest": null,
    "id": "1",
    "name": "Esther",
  },
  Object {
    "guest": Object {
      "guest_id": 1,
    },
    "id": "2",
    "name": "Tom",
  },
]
`;

exports[`normalize can use fully custom entity classes 1`] = `
Object {
  "entities": Object {
    "children": Object {
      "4": Object {
        "id": 4,
        "name": "lettuce",
      },
    },
    "food": Object {
      "1234": Object {
        "children": Array [
          4,
        ],
        "name": "tacos",
        "uuid": "1234",
      },
    },
  },
  "result": Object {
    "schema": "food",
    "uuid": "1234",
  },
}
`;

exports[`normalize ignores null values 1`] = `
Object {
  "entities": Object {},
  "result": Array [
    null,
  ],
}
`;

exports[`normalize ignores null values 2`] = `
Object {
  "entities": Object {},
  "result": Array [
    undefined,
  ],
}
`;

exports[`normalize ignores null values 3`] = `
Object {
  "entities": Object {},
  "result": Array [
    false,
  ],
}
`;

exports[`normalize normalize nested entities with reverse collection 1`] = `
Object {
  "entities": Object {
    "articles": Object {
      "5babc5365e6d2226fe913114": Object {
        "comments": Array [
          "5babc53690c5ceb9a68202ab",
          "5babc536e7328d4644146380",
        ],
        "id": "5babc5365e6d2226fe913114",
        "title": "ullamco nostrud qui commodo",
      },
      "5babc5366d3b194bcbc44d99": Object {
        "comments": Array [
          "5babc536e76daeae9679b9f4",
          "5babc53610db83685f7dfa9b",
        ],
        "id": "5babc5366d3b194bcbc44d99",
        "title": "non sint aliquip occaecat",
      },
      "5babc536db8b35e0b41eb31e": Object {
        "comments": Array [
          "5babc536fef224500c9bc7ed",
          "5babc53659a9c68762271187",
        ],
        "id": "5babc536db8b35e0b41eb31e",
        "title": "laborum cupidatat ex tempor",
      },
    },
    "comments": Object {
      "5babc53610db83685f7dfa9b": Object {
        "article": "5babc5366d3b194bcbc44d99",
        "id": "5babc53610db83685f7dfa9b",
        "msg": "qui qui adipisicing sit",
        "user": "5babc536446cf6183079f908",
      },
      "5babc53659a9c68762271187": Object {
        "article": "5babc536db8b35e0b41eb31e",
        "id": "5babc53659a9c68762271187",
        "msg": "exercitation sunt et est",
        "user": "5babc5368a8f537cfcdf5294",
      },
      "5babc53690c5ceb9a68202ab": Object {
        "article": "5babc5365e6d2226fe913114",
        "id": "5babc53690c5ceb9a68202ab",
        "msg": "anim duis irure ad",
        "user": "5babc536446cf6183079f908",
      },
      "5babc536e7328d4644146380": Object {
        "article": "5babc5365e6d2226fe913114",
        "id": "5babc536e7328d4644146380",
        "msg": "anim Lorem irure sit",
        "user": "5babc5368a8f537cfcdf5294",
      },
      "5babc536e76daeae9679b9f4": Object {
        "article": "5babc5366d3b194bcbc44d99",
        "id": "5babc536e76daeae9679b9f4",
        "msg": "dolore id nostrud aliqua",
        "user": "5babc536f8519e7bfeaaa2fd",
      },
      "5babc536fef224500c9bc7ed": Object {
        "article": "5babc536db8b35e0b41eb31e",
        "id": "5babc536fef224500c9bc7ed",
        "msg": "dolore do proident ullamco",
        "user": "5babc536f8519e7bfeaaa2fd",
      },
    },
    "users": Object {
      "5babc536446cf6183079f908": Object {
        "articles": Array [
          "5babc536db8b35e0b41eb31e",
        ],
        "comments": Array [
          "5babc53690c5ceb9a68202ab",
          "5babc53610db83685f7dfa9b",
        ],
        "id": "5babc536446cf6183079f908",
        "name": "Amparo Lambert",
      },
      "5babc5368a8f537cfcdf5294": Object {
        "articles": Array [
          "5babc5366d3b194bcbc44d99",
        ],
        "comments": Array [
          "5babc536e7328d4644146380",
          "5babc53659a9c68762271187",
        ],
        "id": "5babc5368a8f537cfcdf5294",
        "name": "Kent Foster",
      },
      "5babc536f8519e7bfeaaa2fd": Object {
        "articles": Array [
          "5babc5365e6d2226fe913114",
        ],
        "comments": Array [
          "5babc536fef224500c9bc7ed",
          "5babc536e76daeae9679b9f4",
        ],
        "id": "5babc536f8519e7bfeaaa2fd",
        "name": "Klein Mitchell",
      },
    },
  },
  "result": Object {
    "comments": Array [
      "5babc53690c5ceb9a68202ab",
      "5babc536e7328d4644146380",
      "5babc536fef224500c9bc7ed",
      "5babc53659a9c68762271187",
      "5babc536e76daeae9679b9f4",
      "5babc53610db83685f7dfa9b",
    ],
    "users": Array [
      "5babc536f8519e7bfeaaa2fd",
      "5babc536446cf6183079f908",
      "5babc5368a8f537cfcdf5294",
    ],
  },
}
`;

exports[`normalize normalizes entities 1`] = `
Object {
  "entities": Object {
    "tacos": Object {
      "1": Object {
        "id": 1,
        "type": "foo",
      },
      "2": Object {
        "id": 2,
        "type": "bar",
      },
    },
  },
  "result": Array [
    1,
    2,
  ],
}
`;

exports[`normalize normalizes nested entities 1`] = `
Object {
  "entities": Object {
    "articles": Object {
      "123": Object {
        "author": "8472",
        "body": "This article is great.",
        "comments": Array [
          "comment-123-4738",
        ],
        "id": "123",
        "title": "A Great Article",
      },
    },
    "comments": Object {
      "comment-123-4738": Object {
        "comment": "I like it!",
        "id": "comment-123-4738",
        "user": "10293",
      },
    },
    "users": Object {
      "10293": Object {
        "id": "10293",
        "name": "Jane",
      },
      "8472": Object {
        "id": "8472",
        "name": "Paul",
      },
    },
  },
  "result": "123",
}
`;

exports[`normalize passes over pre-normalized values 1`] = `
Object {
  "entities": Object {
    "articles": Object {
      "123": Object {
        "author": 1,
        "id": "123",
        "title": "normalizr is great!",
      },
    },
  },
  "result": "123",
}
`;

exports[`normalize uses the non-normalized input when getting the ID for an entity 1`] = `
Object {
  "entities": Object {
    "recommendations": Object {
      "456": Object {
        "user": "456",
      },
    },
    "users": Object {
      "456": Object {
        "id": "456",
      },
    },
  },
  "result": "456",
}
`;

exports[`normalize uses the non-normalized input when getting the ID for an entity 2`] = `
Array [
  Array [
    Object {
      "user": Object {
        "id": "456",
      },
    },
    Object {
      "user": Object {
        "id": "456",
      },
    },
    null,
  ],
  Array [
    Object {
      "user": Object {
        "id": "456",
      },
    },
    Object {
      "user": Object {
        "id": "456",
      },
    },
    null,
  ],
]
`;
